# stock-analyzer

./: .gitignore  .zeaburignore  README.md  asset_monitor.py  asset_status.json  crypto_monitor.db  crypto_monitor.py  crypto_status.json  dashboard.py  database.py  index.html  indicator_analyzer.py  main.py  oracle_sniper.py  package-lock.json  pyproject.toml  report_generator.py  requirements.txt  send_telegram.py  telegram_bot.py  transaction_parser.py  zbpack.json
.github/workflows/: asset_monitor.yml  crypto_monitor.yml  deploy.yml
